# waterkant-llmtalk-rpi

./: .env.example  .gitignore  LICENSE  README.md  instructions.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docs/: developer.md  hardware.md  operator.md
frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts  ws.ts
frontend/src/components/: AudioSettings.tsx  ConversationLog.tsx  LLMSettings.tsx  STTSettings.tsx  StatusPanel.tsx  TTSSettings.tsx
frontend/src/hooks/: useWebSocketState.ts
frontend/src/pages/: Conversations.tsx  Dashboard.tsx  Settings.tsx
scripts/: bench.py  install_pi.sh  pull_default_models.sh
scripts/systemd/: ollama.service.override  voice-assistant.service
src/voice_assistant/: __init__.py  config.py  conversation.py  main.py  orchestrator.py  state.py
src/voice_assistant/api/: routes_audio.py  routes_config.py  routes_conversation.py  routes_models.py  routes_system.py  ws.py
src/voice_assistant/audio/: capture.py  devices.py  gpio_ptt.py  playback.py  vad.py
src/voice_assistant/llm/: base.py  ollama.py
src/voice_assistant/stt/: base.py  faster_whisper.py  service.py
src/voice_assistant/tts/: base.py  piper.py  service.py
src/voice_assistant/utils/: events.py  health.py  led.py  logging.py
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_conversation.py  test_state.py
