[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-assistant"
version = "0.1.0"
description = "Local voice assistant for Raspberry Pi 5"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "PyYAML>=6.0.1",
    "sounddevice>=0.4.7",
    "numpy>=1.26.0",
    "aiohttp>=3.9.5",
    "aiosqlite>=0.20.0",
    "structlog>=24.2.0",
    "faster-whisper>=1.0.2",
    "onnxruntime>=1.18.0",
    "psutil>=5.9.8",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
gpio = ["gpiozero>=2.0.1", "lgpio>=0.2.2"]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/voice_assistant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests requiring hardware or network",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
